Testing TorchatMac First implementation of TorcharMac port to iOS. Checking online statuses. Sending messages.

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "dependencies/submodules/AFNetworking"]
 	path = dependencies/submodules/AFNetworking
 	url = https://github.com/AFNetworking/AFNetworking.git
+[submodule "dependencies/submodules/TorchatMac"]
+	path = dependencies/submodules/TorchatMac
+	url = https://github.com/javerous/torchat-mac.git
